# polyClip

./: CMakeLists.txt  PolyClip.hpp  test_polyclip.cpp  test_polyclip_detailed.cpp  test_single_header.cpp
polyclip/: Connector.h  EdgeType.h  Point.h  PointChain.h  PolygonClipper.h  PolygonOp.h  Rectangle.h
polyclip/geom/: Contour.h  Polygon.h  Segment.h
polyclip/sweepline/: EventQueue.h  SweepEvent.h  SweepEventSet.h
